--- a/alarmpage.html
+++ b/alarmpage.html
@@ -83,9 +83,9 @@
             <div id = "body">
                 <div id = "clock"></div>
                 <div id = "timeInput">
-                    <input type="number" id="hour-input" min="0" max="23" value="12">
+                    <input type="number" id="hour-input" min="0" max="23" value="12" pattern="^([0-1][0-9]|2[0-3])$">
                     <label for="hour-input">&nbsp;:&nbsp;</label>
-                    <input type="number" id="minute-input" min="0" max="59" value="0">
+                    <input type="number" id="minute-input" min="0" max="59" value="0" pattern="^[0-5][0-9]$">
                     <!-- <label for="minute-input">分&nbsp;</label> -->
                     <!-- <input type="number" id="second-input" min="0" max="59" value="0">
                     <label for="second-input">秒&nbsp;</label> -->
