--- a/alarmpage.html
+++ b/alarmpage.html
@@ -26,7 +26,7 @@
                 <span class = "slider"></span>
             </label>
         </div>
-        <div class = "alarmModule" id = "pos2">
+        <!-- <div class = "alarmModule" id = "pos2">
             <div class = "alarminfo">
                 <div class = "time">00:00</div>
                 <div class = "name">闹钟2</div>
@@ -64,7 +64,7 @@
             <!-- <button onclick="stopAlarm()">关闭闹钟</button> -->
             <!-- <input type="time" id="alarmTime" placeholder="选择时间"> -->
             <!-- <button onclick="setAlarm()">设置闹钟</button> -->
-        </div>
+        </div> -->
     </div>
     <!-- 模态框 -->
     <div id = "modal">
@@ -81,7 +81,7 @@
                 </button>
             </div>
             <div id = "body">
-                <div id = "clock"></div>
+                <!-- <div id = "clock"></div> -->
                 <div id = "timeInput">
                     <input type="number" id="hour-input" min="0" max="23" value="12" pattern="^([0-1][0-9]|2[0-3])$">
                     <label for="hour-input">&nbsp;:&nbsp;</label>
