--- a/timerpage.html
+++ b/timerpage.html
@@ -62,8 +62,8 @@
         <div class = "timerModule" id = "pos2" onclick = "editTimer(event)">
             <div class = "body">
                 <div class = "timerinfo">
-                    <div class = "time">00:05:00</div>
-                    <div class = "name">5分钟</div>
+                    <div class = "time">00:00:00</div>
+                    <div class = "name">计时器2</div>
                 </div>
                 <div class = "enlargeIcon" onclick="enlarge(this)">
                     <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="26" height="26">
@@ -104,8 +104,8 @@
         <div class = "timerModule" id = "pos3" onclick = "editTimer(event)">
             <div class = "body">
                 <div class = "timerinfo">
-                    <div class = "time">00:10:00</div>
-                    <div class = "name">10分钟</div>
+                    <div class = "time">00:00:00</div>
+                    <div class = "name">计时器3</div>
                 </div>
                 <div class = "enlargeIcon" onclick="enlarge(this)">
                     <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="26" height="26">
